--- a/asiakastyytyvaisyys/asiakastyytyvaisyys.html
+++ b/asiakastyytyvaisyys/asiakastyytyvaisyys.html
@@ -16,7 +16,7 @@
   <h2>Vain vastaamalla voit voittaa!</h2>
 
   <form>
-    <!-- Your form elements -->
+    <!-- Your form elements --->
     <p>
       Etu- ja sukunimi:<br>
       <input type="text" size="40" name="kokonimi"><br>
