--- a/html_css_js_harjoittelua/htmlpohja.html
+++ b/html_css_js_harjoittelua/htmlpohja.html
@@ -23,7 +23,7 @@
 <p>Ensimmäinen paragraafi.</p>
 <br>
 <a class="a" href="untitled-1.html">CSS TEHTY "ANIMAATIO"</a>
-<!--linkkilista-->
+<!--linkkilista--->
 <ul class="linkit">
             <li><a href="https://www.instagram.com/">some</a></li>
             <br>
