--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JLD</title>
 </head>
 <body>
-    
+    <h1>Tehdyt koulutyöt ja harjoitukset</h1>
+<ul>
+    <li><a href="asiakastyytyvaisyys/asiakastyytyvaisyys.html">asiakastyytyvaisyys</a></li>
+    <li><a href="flexbox_harjoitukset/flexbox.html">flexbox_harjoitukset</a></li>
+    <li><a href="html_css_js_harjoittelua/htmlpohja.html">html_css_js_harjoittelua</a></li>
+    <li><a href="js_rocket_harjoitukset/index.html">js_rocket_harjoitukset</a></li>
+</ul>
 </body>
 </html>
