--- a/js_rocket_harjoitukset/index.html
+++ b/js_rocket_harjoitukset/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Raketti</title>
 </head>
 <body>
 <h1>ROCKET!!!</h1>
           <!--js linkki-->
         <script type="text/javascript" src="script.js"></script>
-       
+       <a href="#"onclick="auto.fly();">CLICK ME!</a>
 </body>
 </html>
