--- a/html_css_js_harjoittelua/htmlpohja.html
+++ b/html_css_js_harjoittelua/htmlpohja.html
@@ -7,7 +7,7 @@
 <head>
 <title>Jonin tuntitehtävä</title>
 <link rel="stylesheet" href="reset.css">
-<link rel="stylesheet" href="htmlpohja+css.css">
+<link rel="stylesheet" href="htmlpohja.css">
 <script>
     let d = new Date();
     alert("Tämä päivä on " + d);
