--- a/html_css_js_harjoittelua/htmlpohja.html
+++ b/html_css_js_harjoittelua/htmlpohja.html
@@ -8,10 +8,6 @@
 <title>Jonin tuntitehtävä</title>
 <link rel="stylesheet" href="reset.css">
 <link rel="stylesheet" href="htmlpohja.css">
-<script>
-    let d = new Date();
-    alert("Tämä päivä on " + d);
-</script>
 </head>
 
 <body>
@@ -38,6 +34,8 @@
         <br>
 <!--uutiset-->        
         <footer><a href="https://www.is.fi/uutiset/">Tilaa uutiset!</a></footer>
+
+        <script type="text/javascript" src="script.js"></script>
 
 </body>
 </html>
