--- a/js_rocket_harjoitukset/index.html
+++ b/js_rocket_harjoitukset/index.html
@@ -11,6 +11,6 @@
 <h1>ROCKET!!!</h1>
           <!--js linkki-->
         <script type="text/javascript" src="script.js"></script>
-       <a href="#"onclick="auto.fly();">CLICK ME!</a>
+       <a href="#"onclick="sayMyName('joni');">CLICK ME!</a>
 </body>
 </html>
