--- a/js_rocket_harjoitukset/index.html
+++ b/js_rocket_harjoitukset/index.html
@@ -11,6 +11,7 @@
 <h1>ROCKET!!!</h1>
           <!--js linkki-->
         <script type="text/javascript" src="script.js"></script>
+        <!--muuta say my name vastaamaan css-->
        <a href="#"onclick="sayMyName('joni');">CLICK ME!</a>
 </body>
 </html>
