--- a/asiakastyytyvaisyys/asiakastyytyvaisyys.html
+++ b/asiakastyytyvaisyys/asiakastyytyvaisyys.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Joni Laine">
   <meta name="description" content="Asiakastyytyväisyyskysely">
   <meta name="keywords" content="HTML, CSS">
-  <link rel="stylesheet" href="kysely.css">
+  <link rel="stylesheet" text="text/css" href="kysely.css">
   <title>Asiakastyytyväisyyskysely</title>
 </head>
 
