--- a/html_css_js_harjoittelua/htmlpohja.html
+++ b/html_css_js_harjoittelua/htmlpohja.html
@@ -6,8 +6,8 @@
 
 <head>
 <title>Jonin tuntitehtävä</title>
-<link rel="stylesheet" href="reset.css">
-<link rel="stylesheet" href="htmlpohja.css">
+<link rel="stylesheet" text="text/css" href="reset.css">
+<link rel="stylesheet" text="text/css" href="htmlpohja.css">
 </head>
 
 <body>
