--- a/flexbox_harjoitukset/flexbox.html
+++ b/flexbox_harjoitukset/flexbox.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" text="text/css" href="reset.css">
     <link rel="stylesheet" text="text/css" href="flexbox.css">
-    <title>Dani Crossing</title>
+    <title>Dani Crossin</title>
 </head>
 <h1>Moi</h1>
 <br>
