--- a/html_css_js_harjoittelua/htmlpohja.html
+++ b/html_css_js_harjoittelua/htmlpohja.html
@@ -6,7 +6,7 @@
 
 <head>
 <title>Jonin tuntitehtävä</title>
-<link rel="stylesheet" text="text/css" href="reset.css">
+<link rel="stylesheet" text="text/css" href="untitled-2.css">
 <link rel="stylesheet" text="text/css" href="htmlpohja.css">
 </head>
 
