--- a/html_css_js_harjoittelua/untitled-1.html
+++ b/html_css_js_harjoittelua/untitled-1.html
@@ -5,7 +5,7 @@
   <Title>untitle</Title>
 </head>
 <!--"Animaatio"-->
-  <link rel="stylesheet" href="untitled-2.css">
+<link rel="stylesheet" text="text/css" href="untitled-2.css">
     <div class="container">
         Front-
         <div class="end" style="--stacks: 3;">
