--- a/js_rocket_harjoitukset/index.html
+++ b/js_rocket_harjoitukset/index.html
@@ -12,6 +12,10 @@
           <!--js linkki-->
         <script type="text/javascript" src="script.js"></script>
         <!--muuta say my name vastaamaan css-->
-       <a href="#"onclick="sayMyName('joni');">CLICK ME!</a>
+       <a href="#"onclick="doCoolStuff();">CLICK ME!</a>
+       <div class="cool" id="cool">
+       <p> Hello Im cool</p>
+
+       </div>
 </body>
 </html>
