Tiedostosijainti update ja js_rocket update

--- a/html_css_js_harjoittelua/htmlpohja.html
+++ b/html_css_js_harjoittelua/htmlpohja.html
@@ -6,7 +6,7 @@
 
 <head>
 <title>Jonin tuntitehtävä</title>
-<link rel="stylesheet" text="text/css" href="htmlpohja.css">
+<link rel="stylesheet" type="text/css" href="htmlpohja.css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
 <!--uutiset-->        
         <footer><a href="https://www.is.fi/uutiset/">Tilaa uutiset!</a></footer>
 
-        <script type="text/javascript" src="script.js"></script>
+        <script type="text/javascript" src="script1.js"></script>
 
 </body>
 </html>
