--- a/html_css_js_harjoittelua/htmlpohja.html
+++ b/html_css_js_harjoittelua/htmlpohja.html
@@ -14,7 +14,8 @@
 <h1>Ensimmäinen header</h1>
 </div>
 <br>
-<p>Ensimmäinen paragraafi.</p>
+<!--päivämäärän määritys-->
+<p id="päivä">päivämäärä</p>
 <br>
 <a class="a" href="untitled-1.html">CSS TEHTY "ANIMAATIO"</a>
 <!--linkkilista--->
