--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" text="text/css" href="main.css">
     <title>JLD</title>
 </head>
 <body>
     <h1>Tehdyt koulutyöt ja harjoitukset</h1>
 <ul>
-    <li><a href="asiakastyytyvaisyys/asiakastyytyvaisyys.html">asiakastyytyvaisyys</a></li>
-    <li><a href="flexbox_harjoitukset/flexbox.html">flexbox_harjoitukset</a></li>
-    <li><a href="html_css_js_harjoittelua/htmlpohja.html">html_css_js_harjoittelua</a></li>
-    <li><a href="js_rocket_harjoitukset/index.html">js_rocket_harjoitukset</a></li>
+    <li class="li1"><a href="asiakastyytyvaisyys/asiakastyytyvaisyys.html">asiakastyytyvaisyys</a></li><br>
+    <li class="li2"><a href="flexbox_harjoitukset/flexbox.html">flexbox_harjoitukset</a></li><br>
+    <li class="li3"><a href="html_css_js_harjoittelua/htmlpohja.html">html_css_js_harjoittelua</a></li><br>
+    <li class="li4"><a href="js_rocket_harjoitukset/index.html">js_rocket_harjoitukset</a></li><br>
 </ul>
 </body>
 </html>
