--- a/ensimmäinen javascript_koodi_alert/alert.html
+++ b/ensimmäinen javascript_koodi_alert/alert.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Just alert page</h1>
-    <script> type="text/javascript" src="alert.js"</script>
+    <script type="text/javascript">
+        alert("Moikka!");
+    </script>
 </body>
 </html>
