html_sivu_css2 update

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <li class="li2"><a href="flexbox_harjoitukset/flexbox.html">flexbox_harjoitukset</a></li><br>
     <li class="li3"><a href="html_css_js_harjoittelua/htmlpohja.html">html_css_js_harjoittelua</a></li><br>
     <li class="li4"><a href="js_rocket_harjoitukset/index.html">js_rocket_harjoitukset</a></li><br>
-    <li class="li4"><a href="ensimmäinen javascript_koodi_alert/alert.html">ensimmäinen javascript_koodi_alert</a></li><br>
+    <li class="li5"><a href="ensimmäinen javascript_koodi_alert/alert.html">ensimmäinen javascript_koodi_alert</a></li><br>
+    <li class="li6"><a href="html_sivu_css2/index.html">html_sivu_css2</a></li><br>
 </ul>
 </body>
 </html>
