--- a/html_css_js_harjoittelua/htmlpohja.html
+++ b/html_css_js_harjoittelua/htmlpohja.html
@@ -5,19 +5,19 @@
 <html>
 
 <head>
-<title>Jonin tuntitehtävä</title>
+<title>Harjoittelua</title>
 <link rel="stylesheet" type="text/css" href="htmlpohja.css">
 </head>
 
 <body>
     <div class="header" id="h1"></div>
-<h1>Ensimmäinen header</h1>
+<h1>Alempana lisää!</h1>
 </div>
 <br>
 <!--päivämäärän määritys--->
 <p id="päivä">päivämäärä</p>
 <br>
-<a class="a" href="untitled-1.html">CSS TEHTY "ANIMAATIO"</a>
+<a class="a" href="untitled-1.html">KLIKKAAT TÄSTÄ NÄÄT "CSS TEHTY ANIMAATIO"</a>
 <!--linkkilista--->
 <ul class="linkit">
             <li><a href="https://www.instagram.com/">some</a></li>
