Raketti1.1&1.2_vali_update

--- a/js_rocket_harjoitukset/index.html
+++ b/js_rocket_harjoitukset/index.html
@@ -4,18 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Raketti</title>
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
+    <title>Raketti1.1</title>
 </head>
 <body>
 <h1>ROCKET!!!</h1>
-          <!--js linkki-->
-        <script type="text/javascript" src="script.js"></script>
-        <!--muuta say my name vastaamaan css-->
-       <a href="#"onclick="doCoolStuff();">CLICK ME!</a>
+        <!--on click toiminto-->
+       <a href="#" onclick="doCoolStuff(); {
+         switch(true){
+
+           case value:
+             
+             break;
+         
+           default:
+             break;
+         }
+       }">CLICK ME!</a>
        <div class="cool" id="cool">
        <p> Hello Im cool</p>
 
        </div>
+       <!--js linkki-->
+       <script type="text/javascript" src="JS/script.js"></script>
 </body>
 </html>
