--- a/js_rocket_harjoitukset/rocket.html
+++ b/js_rocket_harjoitukset/rocket.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="CSS/rocket.css">
     <title>Raketti1.2</title>
 </head>
 <body>
@@ -14,6 +15,7 @@
             onclick="startCountDown();">Launch</a>
         </div>
     <div class="right">
+            <div class="ground"></div>
         <div class="rocket">
 
 
