--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 <body>
     <h1>Tehdyt koulutyöt ja harjoitukset</h1>
 <ul>
+    <li class="li1"><a href="flexbox_harjoitukset/flexbox.html">flexbox_harjoitukset</a></li><br>
+    <li class="li2"><a href="html_css_js_harjoittelua/htmlpohja.html">html_css_js_harjoittelua</a></li><br>
+    <li class="li3"><a href="js_rocket_harjoitukset/index.html">js_rocket_harjoitukset</a></li><br>
+    <li class="li4"><a href="ensimmäinen javascript_koodi_alert/alert.html">ensimmäinen javascript_koodi_alert</a></li><br>
+    <li class="li5"><a href="html_sivu_css2/index.html">html_sivu_css2</a></li><br>
+</ul>
+<ul>
+    <h2>Omia projekteja</h2>
     <li class="li1"><a href="asiakastyytyvaisyys/asiakastyytyvaisyys.html">asiakastyytyvaisyys</a></li><br>
-    <li class="li2"><a href="flexbox_harjoitukset/flexbox.html">flexbox_harjoitukset</a></li><br>
-    <li class="li3"><a href="html_css_js_harjoittelua/htmlpohja.html">html_css_js_harjoittelua</a></li><br>
-    <li class="li4"><a href="js_rocket_harjoitukset/index.html">js_rocket_harjoitukset</a></li><br>
-    <li class="li5"><a href="ensimmäinen javascript_koodi_alert/alert.html">ensimmäinen javascript_koodi_alert</a></li><br>
-    <li class="li6"><a href="html_sivu_css2/index.html">html_sivu_css2</a></li><br>
+    <li class="li2"><a href="bootstrap_harjoitus1.1/index.html">bootstrap_harjoitus1.1</a></li><br>
 </ul>
 </body>
 </html>
