--- a/js_rocket_harjoitukset/rocket.html
+++ b/js_rocket_harjoitukset/rocket.html
@@ -5,15 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="CSS/rocket.css">
+    <script type="text/javascript" src="JS/rocket.js"></script>
     <title>Raketti1.2</title>
 </head>
-<body>
+<body class="body-state1">
+    <!-- vaiheet -->
     <div class="left">
         <div class="state1">
             <h1>JS Rocket Launch!</h1>
             <a href="#" class="button"
-            onclick="startCountDown();">Launch</a>
+            onclick="changeState(2);">Launch</a>
         </div>
+        <div class="state2">
+            <h1 id="countdown">10</h1>
+            <a href="#" class="button"
+            onclick="changeState(1);">Abort!</a>
+        </div>
+        <div class="state3">
+            <h1>Lift Off</h1>
+        </div>
+        <div class="state4">
+            <h1>Well done!</h1>
+            <a href="#" class="button"
+            onclick="changeState(1);">Do it again!</a>
+        </div>
+        <div class="state5">
+            <h1>Oh no!!!</h1>
+            <a href="#" class="button"
+            onclick="changeState(1);">Try again!</a>
+        </div>
+        <!-- ympäristön_määrittely -->
     <div class="right">
             <div class="ground"></div>
         <div class="rocket">
