--- a/js_rocket_harjoitukset/rocket.html
+++ b/js_rocket_harjoitukset/rocket.html
@@ -10,12 +10,12 @@
     <title>Raketti1.2</title>
 </head>
 <body class="body-state1">
-    <!-- vaiheet -->
+    <!-- states -->
     <div class="left">
         <div class="state1">
             <h1>JS Rocket Launch!</h1>
             <a href="#" class="button"
-            onclick="changeState(2);">Launch</a>
+            onclick="changeState(2);">Click here to launch the rocket!</a>
         </div>
         <div class="state2">
             <h1 id="countdown">10</h1>
@@ -23,19 +23,19 @@
             onclick="changeState(1);">Abort!</a>
         </div>
         <div class="state3">
-            <h1>Lift Off</h1>
+            <h1>Lift off!</h1>
         </div>
         <div class="state4">
-            <h1>Well done!</h1>
+            <h1>Well done my friend!</h1>
             <a href="#" class="button"
             onclick="changeState(1);">Do it again!</a>
         </div>
         <div class="state5">
-            <h1>Oh no!!!</h1>
+            <h1>Oh no you failed launch!!!</h1>
             <a href="#" class="button"
-            onclick="changeState(1);">Try again!</a>
+            onclick="changeState(1);">Try again please!</a>
         </div>
-        <!-- ympäristön_määrittely -->
+        <!-- surroundings -->
     <div class="right">
             <div class="ground"></div>
         <div class="rocket">
