--- a/js_rocket_harjoitukset/rocket.html
+++ b/js_rocket_harjoitukset/rocket.html
@@ -9,8 +9,13 @@
 
     <title>Raketti1.2</title>
 </head>
-<body class="body-state1">
+
     <!-- states -->
+
+<body class="body-state1">
+
+    <!-- screen_left -->
+
     <div class="left">
         <div class="state1">
             <h1>JS Rocket Launch!</h1>
@@ -35,8 +40,13 @@
             <a href="#" class="button"
             onclick="changeState(1);">Try again please!</a>
         </div>
-        <!-- surroundings -->
-    <div class="right">
+
+        <!-- screen_right -->
+
+            <div class="right">
+
+                <!-- surroundings -->
+
             <div class="ground"></div>
         <div class="rocket">
         </div>
