--- a/js_rocket_harjoitukset/rocket.html
+++ b/js_rocket_harjoitukset/rocket.html
@@ -45,9 +45,12 @@
 
             <div class="right">
 
-                <!-- surroundings -->
+                <!-- earth -->
 
             <div class="ground"></div>
+
+                <!-- rocket -->
+
         <div class="rocket">
         </div>
     </div>
