--- a/jonlaidev_calculator/html/index.html
+++ b/jonlaidev_calculator/html/index.html
@@ -54,7 +54,7 @@
 </body>
 </html>
 
-<script src="/js/script.js"></script>
+<script src="../js/script.js"></script>
 
 
 <!-- projekti linkki:https://www.geeksforgeeks.org/javascript-calculator/?ref=header_search-->
