--- a/index.html
+++ b/index.html
@@ -23,5 +23,9 @@
         <li class="li2"><a href="asiakastyytyvaisyys/asiakastyytyvaisyys.html">asiakastyytyvaisyys</a></li><br>
         <li class="li3"><a href="bootstrap_harjoitus1.1/index.html">bootstrap_harjoitus1.1</a></li><br>
     </ul>
+    <h1>Ryhmätyö</h1>
+    <ul>
+        <li class="li1"><a href="#">pelaajanexus</a></li><br>
+    </ul>
 </body>
 </html>
