--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </ul>
     <h1>Ryhmätyö</h1>
     <ul>
-        <li class="li1"><a href="#">pelaajanexus</a></li><br>
+        <li class="li1"><a href="pelaajanexus/index.html">pelaajanexus</a></li><br>
     </ul>
 </body>
 </html>
