--- a/2FAST GAME/index.html
+++ b/2FAST GAME/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - youtube.com/codingnepal -->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">  
-    <title>Typing Speed Test Game | CodingNepal</title>
+    <title>2FAST | JLD</title>
+    <link rel="icon" type="image/jpg" href="../2FAST GAME/img/2fast_logo.jpg"/>    
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
+    <div class="flex-container">
+        
+      <div class="logo">
+          <img id="logoimage" src="./img/2fast_logo.jpg" alt="logo" width="769px" height="100%">
+          
+      </div>
     <div class="wrapper">
       <input type="text" class="input-field">
       <div class="content-box">
@@ -25,11 +31,7 @@
               <span>0</span>
             </li>
             <li class="wpm">
-              <p>WPM:</p>
-              <span>0</span>
-            </li>
-            <li class="cpm">
-              <p>CPM:</p>
+              <p>WordsPerMin:</p>
               <span>0</span>
             </li>
           </ul>
@@ -38,8 +40,12 @@
       </div>
     </div>
 
-    <script src="js/paragraphs.js"></script>
+    <script src="js/p.js"></script>
     <script src="js/script.js"></script>
-  
+  <footer>
+    <div class="row">
+      Copyright © 2024 - All rights reserved | JLD™ Gaming
+      </div>
+  </footer>
   </body>
 </html>
