--- a/2FAST GAME/index.html
+++ b/2FAST GAME/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">  
     <title>2FAST | JLD</title>
-    <link rel="icon" type="image/jpg" href="../2FAST GAME/img/2fast_logo.jpg"/>    
+    <link rel="icon" type="image/jpg" href="../2FAST GAME/img/2fast_icon.jpg"/>    
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
