--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li class="li1"><a href="jonlaidev_calculator/html/index.html">laskin</a></li><br>
         <li class="li2"><a href="asiakastyytyvaisyys/asiakastyytyvaisyys.html">asiakastyytyvaisyys</a></li><br>
         <li class="li3"><a href="bootstrap_harjoitus1.1/index.html">bootstrap_harjoitus1.1</a></li><br>
+        <li class="li4"><a href="2FAST GAME/index.html">"2fast"pikakirjoitus_peli</a></li><br>
     </ul>
     <h1>Ryhmätyö</h1>
     <ul>
