--- a/index.html
+++ b/index.html
@@ -8,25 +8,28 @@
     <title>JLD</title>
 </head>
 <body>
-        <h1>Tehdyt koulutyöt ja harjoitukset</h1>
+        <h1>𝒞𝒱 | 𝒥𝑜𝓃𝒾 𝐿𝒶𝒾𝓃𝑒</h1>
     <ul>
-        <li class="li1"><a href="ensimmainen_javascript_koodi_alert/alert.html">ensimmäinen javascript_koodi_alert</a></li><br>
-        <li class="li2"><a href="js_rocket_harjoitukset/index.html">js_rocket_harjoitukset1.1</a></li><br>
-        <li class="li3"><a href="js_rocket_harjoitukset/rocket.html">js_rocket_harjoitukset1.2</a></li><br>
-        <li class="li4"><a href="html_sivu_css2/index.html">html_sivu_css2</a></li><br>
-        <li class="li5"><a href="flexbox_harjoitukset/flexbox.html">flexbox_harjoitukset</a></li><br>
-        <li class="li6"><a href="html_css_js_harjoittelua/htmlpohja.html">html_css_js_harjoittelua</a></li><br>
+            <li class="li1"><a href="cv_front/index.html">CV | Joni Laine </a></li><br>
     </ul>
-        <h1>Omia projekteja</h1>
+
+        <h1>𝓣𝓮𝓱𝓭𝔂𝓽 𝓴𝓸𝓾𝓵𝓾𝓽𝔂ö𝓽 𝓳𝓪 𝓱𝓪𝓻𝓳𝓸𝓲𝓽𝓾𝓴𝓼𝓮𝓽</h1>
     <ul>
-        <li class="li1"><a href="jonlaidev_calculator/html/index.html">laskin</a></li><br>
-        <li class="li2"><a href="asiakastyytyvaisyys/asiakastyytyvaisyys.html">asiakastyytyvaisyys</a></li><br>
-        <li class="li3"><a href="bootstrap_harjoitus1.1/index.html">bootstrap_harjoitus1.1</a></li><br>
-        <li class="li4"><a href="2FAST GAME/index.html">"2fast"pikakirjoitus_peli</a></li><br>
+        <li class="li1"><a href="ensimmainen_javascript_koodi_alert/alert.html">Ensimmäinen JavaScrip: Alert</a></li><br>
+        <li class="li2"><a href="js_rocket_harjoitukset/index.html">JavaScrip Rocket1.1</a></li><br>
+        <li class="li3"><a href="js_rocket_harjoitukset/rocket.html">JavaScrip Rocket1.2</a></li><br>
+        <li class="li4"><a href="html_sivu_css2/index.html"> HTML & CSS harjoitus 1.2</a></li><br>
     </ul>
-    <h1>Ryhmätyö</h1>
+        <h1>𝓞𝓶𝓲𝓪 𝓹𝓻𝓸𝓳𝓮𝓴𝓽𝓮𝓳𝓪</h1>
     <ul>
-        <li class="li1"><a href="pelaajanexus/index.html">pelaajanexus</a></li><br>
+        <li class="li1"><a href="jonlaidev_calculator/html/index.html">Laskin teemalla</a></li><br>
+        <li class="li2"><a href="asiakastyytyvaisyys/asiakastyytyvaisyys.html">Asiakastyytyvaisyys kysely</a></li><br>
+        <li class="li3"><a href="bootstrap_harjoitus1.1/index.html">Bootstrap harjoitus 1.1</a></li><br>
+        <li class="li4"><a href="2FAST GAME/index.html">"2FAST" Pikakirjoitus peli</a></li><br>
+    </ul>
+    <h1>𝓡𝔂𝓱𝓶ä𝓽𝔂ö</h1>
+    <ul>
+        <li class="li1"><a href="pelaajanexus/index.html">"Pelaajanexus" Ryhmätyönä tehty peliarvostelu sivusto</a></li><br>
     </ul>
 </body>
 </html>
