--- a/cv_front/index.html
+++ b/cv_front/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV</title>
+    <title>𝒞𝒱 | 𝒥𝑜𝓃𝒾 𝐿𝒶𝒾𝓃𝑒</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/jpg" href="../cv_front/img/jonlaidev(LOGO).jpg"/>
 </head>
 <body>
     <link href='https://fonts.googleapis.com/css?family=Lato:300,300italic,400,400italic' rel='stylesheet' type='text/css'>
@@ -15,7 +16,7 @@
       <div id="header">
         <!-- LOGOTYPE/NAME -->
         <div class="header_logotype_container">
-          <h1 class="logotype_name">Javier <span class="purple">Latorre</span></h1>
+          <h1 class="logotype_name">Joni <span class="purple">Laine</span></h1>
           <h2 class="logotype_occupation">Frontend Web Developer</h2>
         </div>
         <!-- MAIN MENU -->
@@ -27,36 +28,34 @@
           <div class="clear"></div>
           <ul class="header_menu horizontal_list">
             <li><a class="no_border purple" href="#">Profile</a></li>
-            <li><a href="#">Education</a></li>
-            <li><a href="#">Skills</a></li>
+            <li><a href="https://www.luksia.fi/project/tieto-ja-viestintatekniikan-perustutkinto-ohjelmistokehittaja/">Education</a></li>
+            <li><a href="https://jonlaidev.github.io/WELCOME/">Skills</a></li>
             <li><a href="#">Work Experience</a></li>
-            <li><a href="#">Featured Projects</a></li>
-            <li><a href="#">Awards</a></li>
+            <li><a href="https://jonlaidev.github.io/">Featured Projects</a></li>
           </ul>
         </div>
       </div>
       <!-- LEFT COL -->
       <div id="left_col">
         <div class="profile_frame">
-          <div class="profile_picture"></div>
-          <!-- <img src="images/javier_latorre.jpg" alt="profile picture"> -->
+          <div class="profile_picture"><img src="../cv_front/img/jonlaidev(LOGO).jpg" alt="profile picture" width="100%" height="100%">
+          </div>
         </div>
         <div class="hello_content">
           <h2>Hello!</h2>
-          <p>I'm passionate about technology and human behavior, hardworker and a fast-learner with experience in around 10 different countries studying, working and volunteering.</p>
+          <p>I'm a passionate <span> Front End Developer</span> with a keen eye for detail and a love for crafting seamless user experiences. With expertise in <span>HTML, CSS, JavaScript, and modern frameworks</span>, I bring creative designs to life and ensure robust, responsive web applications. <span>Let's build something amazing together!</span></p>
         </div>
         <div class="contact_details_content">
           <h2>Contact details</h2>
           <p class="purple">Phone:</p>
-          <p>+34 123 456 789</p>
+          <p>+358 440343006</p>
           <p class="purple">Email:</p>
-          <p>jlalovi@gmail.com</p>
+          <p>joni.laine@hotmail.fi</p>
           <p class="purple">Adress:</p>
-          <p>Someplace, 5</p>
-          <p>Jaén, Spain</p>
-          <p>23001</p>
+          <p>Vihti, Suomi</p>
+          <p>03400</p>
         </div>
-        <a href="mailto:jlalovi@gmail.com" class="send_message_button">
+        <a href="mailto:joni.laine@hotmail.fi" class="send_message_button">
           <span class="cut1"></span>
           <span class="cut2"></span>
           <span class="content">Send me a message <span class="fontawesome-double-angle-right"></span></span>
@@ -64,9 +63,9 @@
         <div class="get_social_content">
           <h2>Get social</h2>
           <ul class="social_icons horizontal_list">
-            <li><a class="facebook" href="https://www.facebook.com/jlalovi"><span class="entypo-facebook-circled"></span><span class="invisible">Facebook</span></a></li>
-            <li><a class="twitter" href="https://twitter.com/jlalovi"><span class="entypo-twitter-circled"></span><span class="invisible">Twitter</span></a></li>
-            <li><a class="linkedin" href="https://www.linkedin.com/in/jlalovi/en"><span class="entypo-linkedin-circled"></span><span class="invisible">LinkedIn</span></a></li>
+            <li><a class="facebook" href="https://www.facebook.com/"><span class="entypo-facebook-circled"></span><span class="invisible">Facebook</span></a></li>
+            <li><a class="twitter" href="https://twitter.com/"><span class="entypo-twitter-circled"></span><span class="invisible">Twitter</span></a></li>
+            <li><a class="linkedin" href="https://www.linkedin.com/"><span class="entypo-linkedin-circled"></span><span class="invisible">LinkedIn</span></a></li>
           </ul>
         </div>
       </div>
@@ -75,14 +74,14 @@
         <div class="block">
           <h1>Profile</h1>
           <blockquote class="profile_quote">
-            <p>"There is no end to education. It is not that you read a book, pass an examination, and finish with education. The whole of life, from the moment you are born to the moment you die, is a process of learning."</p>
-            <p>Jiddu Krishnamurti.</p>
+            <p>"Developing software isn't just about writing code. It's about creating solutions that make people's lives easier, more efficient, and more enjoyable."</p>
+            <p>- Joni Laine</p>
             <span class="entypo-quote"></span>
           </blockquote>
         </div>
         <div class="block">
           <h2>A few words about me</h2>
-          <p>Until now, in my life, I change from active moments with a lot of variety, challenges and improvisations, to moments of tranquility and stability, being difficult to stay in a place during a long time. I consider myself a tolerant and respectful person with open mind and quite honest. I really like to listen people stories and backgrounds and their different experiences around the world.</p>				
+          <p>I am a dedicated Software Development student with a passion for learning and innovation. With a unique background as a former truck and excavator driver, I bring a strong work ethic, problem-solving skills, and a practical mindset to my programming journey. Currently honing my skills in Python, JQuery, API, PHP, React, NodeJS, Rust etc. </p>				
         </div>
         <div class="horizontal_line">
           <div class="line_left"></div>
@@ -93,15 +92,14 @@
         </div>
         <div class="block">
           <h2>Philosophy</h2>
-          <p>I belive in ethic and moral not in imposed rules that you "have to" do or follow.</p>
           <div class="philosophy_content">
-            <p>I believe life is made from different shades of grey, not from black and white. Furthermore, as a human being with rationality, I think it is our duty to take care of the world and treat others as one would like others to treat oneself. This way of perceiving reality affects my beliefs and my way of behaving. Summarizing on several points:</p>
+            <p>My philosophy as a software developer revolves around continuous learning, sustainable practices, and building trust through a strong work ethic. I am passionate about writing clean, optimized, and green code that not only solves complex problems but also minimizes environmental impact. Committed to creating user-friendly applications, I strive to contribute to projects that promote sustainability and make a meaningful impact in the tech landscape. Summarizing on several points:</p>
             <ul>
-              <li>Pragmatic</li>
+              <li>Trust</li>
               <li>Honest</li>
               <li>Respectful</li>
-              <li>Open-minded</li>
-              <li>Coherent</li>
+              <li>Continuous learning</li>
+              <li>Sustainable practices</li>
             </ul>
             <div class="clear"></div>
           </div>
@@ -115,22 +113,25 @@
         </div>
         <div class="last block">
           <h2>Interests & Hobbies</h2>
-          <p>I'm passionate about technology and human behavior, both determine almost all my interests and hobbies:</p>
+          <p>In my leisure time, I immerse myself in a diverse array of interests and hobbies, each contributing to my multifaceted persona. Whether it's delving into the virtual worlds of gaming, honing my coding skills through personal projects, or hitting the gym to maintain a healthy balance, I find fulfillment in both mental and physical pursuits. Beyond these, I have a penchant for exploring the intricacies of economy and finance, indulging in the craftsmanship of cigars and mechanical watches, and admiring the engineering marvels of cars and machines. Above all, I cherish the journey of continuous learning, as each new interest becomes an opportunity for personal growth and enrichment. Summarizing on several points:</p>
           <ul>
-            <li>Visiting new places</li>
-            <li>Meeting people</li>
-            <li>Having new experiences</li>
-            <li>Hiking and Biking</li>
-            <li>Web Developing</li>
-            <li>Computer Gamming</li>
-            <li>Manga and Anime</li>
+            <li>Gym</li>
+            <li>Cars</li>
+            <li>Cigars</li>
+            <li>Fishing</li>
+            <li>Coding</li>
+            <li>Gaming</li>
+            <li>Machines</li>
+            <li>Economy</li>
+            <li>Mechanical Watches</li>
+            <li>Continuous Learning</li>
           </ul>
         </div>
       </div>
       <div class="clear"></div>
       <!-- FOOTER -->
       <div id="footer">
-        <p class="footer_name">Javier Latorre CV 2015</p>
+        <p class="footer_name">Joni Laine CV</p>
       </div>
 		</div>
 </body>
