--- a/index.html
+++ b/index.html
@@ -8,26 +8,25 @@
     <title>JLD</title>
 </head>
 <body>
-        <h1>𝒞𝒱 | 𝒥𝑜𝓃𝒾 𝐿𝒶𝒾𝓃𝑒</h1>
+        <h1>𝓜𝔂 𝓒𝓥</h1>
     <ul>
-            <li class="li1"><a href="cv_front/index.html">CV | Joni Laine </a></li><br>
+            <li class="li1"><a href="cv_front/index.html"> CV | Joni Laine </a></li><br>
     </ul>
 
-        <h1>𝓣𝓮𝓱𝓭𝔂𝓽 𝓴𝓸𝓾𝓵𝓾𝓽𝔂ö𝓽 𝓳𝓪 𝓱𝓪𝓻𝓳𝓸𝓲𝓽𝓾𝓴𝓼𝓮𝓽</h1>
+        <h1>𝓒𝓸𝓶𝓹𝓵𝓮𝓽𝓮𝓭 𝓼𝓬𝓱𝓸𝓸𝓵 𝓮𝔁𝓮𝓻𝓬𝓲𝓼𝓮𝓼</h1>
     <ul>
-        <li class="li1"><a href="ensimmainen_javascript_koodi_alert/alert.html">Ensimmäinen JavaScrip: Alert</a></li><br>
-        <li class="li2"><a href="js_rocket_harjoitukset/index.html">JavaScrip Rocket1.1</a></li><br>
-        <li class="li3"><a href="js_rocket_harjoitukset/rocket.html">JavaScrip Rocket1.2</a></li><br>
-        <li class="li4"><a href="html_sivu_css2/index.html"> HTML & CSS harjoitus 1.2</a></li><br>
+        <li class="li1"><a href="ensimmainen_javascript_koodi_alert/alert.html"> First JavaScrip: Alert </a></li><br>
+        <li class="li2"><a href="js_rocket_harjoitukset/index.html"> JavaScrip Rocket1.1 </a></li><br>
+        <li class="li3"><a href="js_rocket_harjoitukset/rocket.html"> JavaScrip Rocket1.2 </a></li><br>
+        <li class="li4"><a href="html_sivu_css2/index.html"> HTML & CSS exercise 1.2 </a></li><br>
     </ul>
-        <h1>𝓞𝓶𝓲𝓪 𝓹𝓻𝓸𝓳𝓮𝓴𝓽𝓮𝓳𝓪</h1>
+        <h1>𝓜𝔂 𝓸𝔀𝓷 𝓹𝓻𝓸𝓳𝓮𝓬𝓽𝓼</h1>
     <ul>
-        <li class="li1"><a href="jonlaidev_calculator/html/index.html">Laskin teemalla</a></li><br>
-        <li class="li2"><a href="asiakastyytyvaisyys/asiakastyytyvaisyys.html">Asiakastyytyvaisyys kysely</a></li><br>
-        <li class="li3"><a href="bootstrap_harjoitus1.1/index.html">Bootstrap harjoitus 1.1</a></li><br>
-        <li class="li4"><a href="2FAST GAME/index.html">"2FAST" Pikakirjoitus peli</a></li><br>
+        <li class="li1"><a href="jonlaidev_calculator/html/index.html"> Calculator with theme </a></li><br>
+        <li class="li3"><a href="bootstrap_harjoitus1.1/index.html"> Bootstrap exercise "having fun" 1.1 </a></li><br>
+        <li class="li4"><a href="2FAST GAME/index.html"> "2FAST" Pikakirjoitus peli </a></li><br>
     </ul>
-    <h1>𝓡𝔂𝓱𝓶ä𝓽𝔂ö</h1>
+    <h1>𝓣𝓮𝓪𝓶𝔀𝓸𝓻𝓴</h1>
     <ul>
         <li class="li1"><a href="pelaajanexus/index.html">"Pelaajanexus" Ryhmätyönä tehty peliarvostelu sivusto</a></li><br>
     </ul>
