--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" text="text/css" href="main.css">
-    <title>JLD</title>
+    <link rel="icon" type="image/jpg" href="../jonlaidev.github.io/jonlaidev(LOGO).jpg"/>    
+    <title>𝓙𝓛𝓓</title>
 </head>
 <body>
         <h1>𝓜𝔂 𝓒𝓥</h1>
