--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" text="text/css" href="main.css">
-    <link rel="icon" type="image/jpg" href="../jonlaidev.github.io/jonlaidev(LOGO).jpg"/>    
+    <link rel="icon" type="image/jpg" href="./jonlaidev.github.io/jonlaidev(LOGO).jpg"/>    
     <title>𝓙𝓛𝓓</title>
 </head>
 <body>
