--- a/cv_front/index.html
+++ b/cv_front/index.html
@@ -63,6 +63,7 @@
         <div class="get_social_content">
           <h2>Get social</h2>
           <ul class="social_icons horizontal_list">
+            <li><a class="instagram" href="https://www.instagram.com/"><span class="entypo-instagram-circled"></span><span class="invisible">Instagram</span></a></li>
             <li><a class="facebook" href="https://www.facebook.com/"><span class="entypo-facebook-circled"></span><span class="invisible">Facebook</span></a></li>
             <li><a class="twitter" href="https://twitter.com/"><span class="entypo-twitter-circled"></span><span class="invisible">Twitter</span></a></li>
             <li><a class="linkedin" href="https://www.linkedin.com/"><span class="entypo-linkedin-circled"></span><span class="invisible">LinkedIn</span></a></li>
@@ -121,17 +122,15 @@
             <li>Fishing</li>
             <li>Coding</li>
             <li>Gaming</li>
-            <li>Machines</li>
             <li>Economy</li>
-            <li>Mechanical Watches</li>
-            <li>Continuous Learning</li>
+            <li>Machines</li>
           </ul>
         </div>
       </div>
       <div class="clear"></div>
       <!-- FOOTER -->
       <div id="footer">
-        <p class="footer_name">Joni Laine CV</p>
+        <p class="footer_name">𝒥𝑜𝓃𝒾 𝐿𝒶𝒾𝓃𝑒 &nbsp;| 𝒞𝒱</p>
       </div>
 		</div>
 </body>
