--- a/cv_front/index.html
+++ b/cv_front/index.html
@@ -10,16 +10,16 @@
 <body>
     <link href='https://fonts.googleapis.com/css?family=Lato:300,300italic,400,400italic' rel='stylesheet' type='text/css'>
 
-<!-- MAIN CONTAINER -->
+<!-- MAIN_CONTAINER -->
 		<div id="main_container">
       <!-- HEADER -->
       <div id="header">
         <!-- LOGOTYPE/NAME -->
         <div class="header_logotype_container">
           <h1 class="logotype_name">Joni <span class="purple">Laine</span></h1>
-          <h2 class="logotype_occupation">Frontend Web Developer</h2>
+          <h2 class="logotype_occupation">Front-End Web Developer</h2>
         </div>
-        <!-- MAIN MENU -->
+        <!-- MAIN_MENU -->
         <div class="header_menu_container">
           <ul class="download_print_buttons horizontal_list">
             <li><a href="#"><span class="icon entypo-download"></span>Download CV</a></li>
@@ -35,7 +35,7 @@
           </ul>
         </div>
       </div>
-      <!-- LEFT COL -->
+      <!-- LEFT_COLUMN -->
       <div id="left_col">
         <div class="profile_frame">
           <div class="profile_picture"><img src="../cv_front/img/jonlaidev(LOGO).jpg" alt="profile picture" width="100%" height="100%">
@@ -70,7 +70,7 @@
           </ul>
         </div>
       </div>
-      <!-- PROFILE CONTENT -->
+      <!-- PROFILE_CONTENT -->
       <div id="content_container">				
         <div class="block">
           <h1>Profile</h1>
