--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <h1>𝓜𝔂 𝓸𝔀𝓷 𝓹𝓻𝓸𝓳𝓮𝓬𝓽𝓼</h1>
     <ul>
         <li class="li1"><a href="jonlaidev_calculator/html/index.html"> Calculator with theme </a></li><br>
+        <li class="li2"><a href="lotto/index.html"> LOTTO </a></li><br>
         <li class="li3"><a href="bootstrap_harjoitus1.1/index.html"> Bootstrap exercise "having fun" 1.1 </a></li><br>
         <li class="li4"><a href="2FAST GAME/index.html"> "2FAST" Pikakirjoitus peli </a></li><br>
     </ul>
