--- a/index.html
+++ b/index.html
@@ -37,5 +37,8 @@
     <ul>
         <li class="li1"><a href="pelaajanexus/index.html">"Pelaajanexus" Ryhmätyönä tehty peliarvostelu sivusto</a></li><br>
     </ul>
+    <footer>
+        
+    </footer>
 </body>
 </html>
