--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <h1>𝓣𝓙𝓚 𝓭𝓲𝓪𝓻𝔂</h1>
     <ul>
-        <li class="li1"><a href="https://jonlaidevgithub.wordpress.com/"> TJK diary </a></li><br>
+        <li class="li1"><a href="jonlaidevgithub.wordpress.com"> TJK diary </a></li><br>
     </ul>
 
         <h1>𝓒𝓸𝓶𝓹𝓵𝓮𝓽𝓮𝓭 𝓼𝓬𝓱𝓸𝓸𝓵 𝓹𝓻𝓪𝓬𝓽𝓲𝓬𝓮𝓼</h1>
@@ -38,7 +38,7 @@
         <li class="li1"><a href="pelaajanexus/index.html">"Pelaajanexus" Ryhmätyönä tehty peliarvostelu sivusto</a></li><br>
     </ul>
     <footer>
-        
+
     </footer>
 </body>
 </html>
